--- a/FomoHack/FomoLib/FomoLib.csproj
+++ b/FomoHack/FomoLib/FomoLib.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Error\DisgruntledNinja.cs" />
     <Compile Include="Ninja.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Weapon.cs" />
+    <Compile Include="IWeapon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
