Trigger failing build.

--- a/FomoHack/FomoLib.Tests/FomoLib.Tests.csproj
+++ b/FomoHack/FomoLib.Tests/FomoLib.Tests.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ninjas\NunchuckTests.cs" />
     <Compile Include="Ninjas\SwordTests.cs" />
     <Compile Include="Ninjas\NinjaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
