--- a/FomoHack/FomoLib/FomoLib.csproj
+++ b/FomoHack/FomoLib/FomoLib.csproj
@@ -41,12 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ninjas\Error\DisgruntledNinja.cs" />
-    <Compile Include="Ninjas\Nunchuck.cs" />
+    <Compile Include="Ninjas\Errors\DisgruntledNinja.cs" />
+    <Compile Include="Ninjas\ITarget.cs" />
     <Compile Include="Ninjas\Ninja.cs" />
-    <Compile Include="Ninjas\IWeapon.cs" />
+    <Compile Include="Ninjas\Weapons\IWeapon.cs" />
+    <Compile Include="Ninjas\Weapons\Nunchuck.cs" />
+    <Compile Include="Ninjas\Weapons\Sword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ninjas\Sword.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
